--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.1.0",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "canvas": "^1.3.12",
     "exec": "^0.2.1",
     "express": "~4.0.0",
     "jade": "^1.11.0",
     "multer": "1.1.0",
     "path": "^0.12.7",
+    "pdfkit": "^0.7.2",
+    "qr-image": "^3.1.0",
+    "qrcode": "^0.4.2",
     "rpi-ws2801": "0.0.4"
   },
   "devDependencies": {},
