--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "exec": "^0.2.1",
     "express": "~4.0.0",
     "gm": "^1.22.0",
+    "http": "0.0.0",
     "jade": "^1.11.0",
     "multer": "1.1.0",
     "path": "^0.12.7",
